United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7098282 G1: assert(interval >= 0) failed: Sanity check, referencePolicy.cpp: 76
7098282 : G1: assert(interval >= 0) failed: Sanity check, referencePolicy.cpp: 76

Details
Type:
Bug
Submit Date:
2011-10-05
Status:
Closed
Updated Date:
2012-01-23
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
generic
Sub-Component:
gc
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
8
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
Nightly test failure:

;; Using jvm: "/export/local/common/jdk/baseline/solaris-i586/jre/lib/i386/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/231146.ap31282/source/src/share/vm/memory/referencePolicy.cpp:76), pid=26379, tid=12
#  assert(interval>= 0) failed: Sanity check
#

Stack trace:
---------------  T H R E A D  ---------------

Current thread (0x080b2c00):  GCTaskThread [stack: 0x00000000,0x00000000] [id=12]

Stack: 
[error occurred during error reporting (printing stack bounds), id 0xe0000000]

Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0x1dd48d8]  void VMError::report(outputStream*)+0x904;;  void VMError::report(outputStream*)+0x904
V  [libjvm.so+0x1dd5a89]  void VMError::report_and_die()+0x56d;;  void VMError::report_and_die()+0x56d
V  [libjvm.so+0xb263e6]  void report_vm_error(const char*,int,const char*,const char*)+0x53a;;  void report_vm_error(const char*,int,const char*,const char*)+0x53a
V  [libjvm.so+0x1dd5408]  void VMError::report(outputStream*)+0x1434;;  void VMError::report(outputStream*)+0x1434
V  [libjvm.so+0x1dd5a89]  void VMError::report_and_die()+0x56d;;  void VMError::report_and_die()+0x56d
V  [libjvm.so+0xb263e6]  void report_vm_error(const char*,int,const char*,const char*)+0x53a;;  void report_vm_error(const char*,int,const char*,const char*)+0x53a
V  [libjvm.so+0x1a9ad41]  bool LRUMaxHeapPolicy::should_clear_reference(oop)+0x8d;;  bool LRUMaxHeapPolicy::should_clear_reference(oop)+0x8d
V  [libjvm.so+0x1aaba48]  bool ReferenceProcessor::discover_reference(oop,ReferenceType)+0x2b8;;  bool ReferenceProcessor::discover_reference(oop,ReferenceType)+0x2b8
V  [libjvm.so+0xf0bc53]  int instanceRefKlass::oop_oop_iterate_backwards_nv(oop,G1ParScanClosure*)+0xdcb;;  int instanceRefKlass::oop_oop_iterate_backwards_nv(oop,G1ParScanClosure*)+0xdcb
V  [libjvm.so+0xc9c035]  oop G1ParCopyHelper::copy_to_survivor_space(oop,bool,bool)+0x13f1;;  oop G1ParCopyHelper::copy_to_survivor_space(oop,bool,bool)+0x13f1
V  [libjvm.so+0xccda6d]  void G1ParCopyClosure<false,(G1Barrier)2,false>::do_oop_work<oop>(__type_3*)+0x379;;  void G1ParCopyClosure<false,(G1Barrier)2,false>::do_oop_work<oop>(__type_3*)+0x379
V  [libjvm.so+0xc9a442]  void G1ParScanThreadState::trim_queue()+0x632;;  void G1ParScanThreadState::trim_queue()+0x632
V  [libjvm.so+0xc9c984]  void G1ParEvacuateFollowersClosure::do_void()+0x2c;;  void G1ParEvacuateFollowersClosure::do_void()+0x2c
V  [libjvm.so+0xca9534]  void G1ParTask::work(int)+0x628;;  void G1ParTask::work(int)+0x628
V  [libjvm.so+0x1e1aea0]  void GangWorker::loop()+0x49c;;  void GangWorker::loop()+0x49c
V  [libjvm.so+0x1e1a894]  void GangWorker::run()+0x24;;  void GangWorker::run()+0x24
V  [libjvm.so+0x193594f]  java_start+0x6fb;;  java_start+0x6fb
C  [libc.so.1+0xbd6d3]  _thrp_setup+0x9b;;  _thrp_setup+0x9b
C  [libc.so.1+0xbd980]  _lwp_start+0x0;;  _lwp_start+0x0

Testrun Link:
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2011-10-04/G1_GC_Baseline/vm/solaris-i586/server/mixed/solaris-i586_vm_server_mixed_nsk.jvmti.unit.testlist/analysis.html

Log:
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2011-10-04/G1_GC_Baseline/vm/solaris-i586/server/mixed/solaris-i586_vm_server_mixed_nsk.jvmti.unit.testlist/ResultDir/JvmtiTest_copy_1/JvmtiTest.log

hs_err:
http://sqeweb.us.oracle.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2011-10-04/G1_GC_Baseline/vm/solaris-i586/server/mixed/solaris-i586_vm_server_mixed_nsk.jvmti.unit.testlist/ResultDir/JvmtiTest_copy_1/hs_err_pid26379.log

Test Name:
nsk/jvmti/unit/timers/JvmtiTest

                                    

Comments
EVALUATION

See main CR
                                     
2011-10-22
SUGGESTED FIX

Cache the value of the soft ref timestamp clock into a static field in the ReferenceProcessor class.
                                     
2011-10-13
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/d1bdeef3e3e2
                                     
2011-10-12
EVALUATION

Race between one thread copying the java klass mirror for java/lang/ref/SoftReference class and another attempting to discover a soft reference.
                                     
2011-10-06



Hardware and Software, Engineered to Work Together